[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/DeathMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/MinecraftTen56.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/MinecraftTen32.tres" type="DynamicFont" id=4]

[node name="DeathMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.482353, 0.141176, 0.109804, 0.509804 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 366.0
margin_top = 174.0
margin_right = 658.0
margin_bottom = 426.0

[node name="GameOver" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 3 )
text = "Game Over"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 292.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 100 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 40.0
margin_top = 12.0
margin_right = 251.0
margin_bottom = 88.0

[node name="YourScore" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 211.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Your Score: 0"
align = 1

[node name="BestScore" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 211.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 4 )
text = "Best Score: 0"
align = 1

[node name="Restart" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 292.0
margin_bottom = 206.0
custom_fonts/font = ExtResource( 4 )
text = "Restart"

[node name="MainMenu" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 292.0
margin_bottom = 252.0
custom_fonts/font = ExtResource( 4 )
text = "Main Menu"

[connection signal="button_up" from="ColorRect/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_button_up"]
[connection signal="button_up" from="ColorRect/CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_button_up"]
